# slamdunk

./: .gitignore  CMakeLists.txt  HelloWorld  README.md  download_data.sh
cmake/: CMakeLists.txt
cmake/ceres-solver/: CMakeLists.txt
cmake/eigen/: CMakeLists.txt
cmake/glog/: CMakeLists.txt
cmake/googletest/: CMakeLists.txt
cmake/opencv/: CMakeLists.txt
include/: bundle_adjustment.hpp  load_data.hpp  slamdunk.hpp
python_code/: 01_out_feature_points.txt-solved.txt  02_five_images_out_feature_points.txt-solved.txt  02_out_feature_points.txt-solved.txt  03_out_feature_points.txt-solved.txt  100_out_feature_points.txt-solved.txt  10_out_feature_points.txt-solved.txt  20_out_feature_points.txt-solved.txt  30_out_feature_points.txt-solved.txt  40_out_feature_points.txt-solved.txt  50_out_feature_points.txt-solved.txt  60_out_feature_points.txt-solved.txt  70_out_feature_points.txt-solved.txt  80_out_feature_points.txt-solved.txt  90_out_feature_points.txt-solved.txt  all_out_feature_points.txt-solved.txt  color_3d_plot.py  create_fake_data.py  data_fake.txt  five_images_out_feature_points.txt-solved.txt  ladybug_test.py  new_plot_points.py  plot_points_and_camera.py  problem-49-7776-pre.txt-solved.txt  solved-49-7776.txt
src/: load_data.cpp  slamdunk  slamdunk.cpp
test/: demo_bundle_adjustment.cpp  test_ceres.cpp  test_ceres.hpp  test_slamdunk.cpp
